--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -134,7 +134,7 @@ html, body {
       padding: 8px 16px;
       background-color: #fff6f7;
       border-radius: 4px;
-      border-left: #FE6C6F 5px solid;
+      border-left: #FF525D 5px solid;
       margin: 20px 0;
       code {
         background-color: rgba(255, 255, 255, .7);
