组件测试+组件文档

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -79,7 +79,9 @@ html, body {
   
   .container,
   .page-container {
-    padding: 0;
+    // height: 100%;
+    // width: 100%;
+    padding: 10px 20px;
     margin: 0 auto;
   }
   
