--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -167,4 +167,64 @@ html, body {
   
 
 
- 
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    background-color: #fff;
+    font-size: 14px;
+    line-height: 1.5em;
+  
+    thead {
+      display: table-header-group;
+      vertical-align: middle;
+      border-color: inherit;
+      tr {
+        display: table-row;
+        vertical-align: inherit;
+        border-color: inherit;
+      }
+      th {
+        text-align: left;
+        white-space: nowrap;
+        color: #3689f3;
+        font-weight: 400;
+        border-bottom: 1px solid #dcdfe6;
+        padding: 10px;
+      }
+    }
+    tbody {
+      display: table-row-group;
+      vertical-align: middle;
+      border-color: inherit;
+      tr {
+        td {
+          border-bottom: 1px solid #dcdfe6;
+          padding: 10px;
+        }
+      }
+    }
+    .flex-table-cell {
+      font-weight: 500;
+      font-size: 12px;
+      display: flex;
+      justify-content: space-around;
+      .btn-text{
+        font-size: 12px;
+        color: #409EFF;
+        &:active{
+          color: #3a8ee6;
+          background-color: transparent;
+        }
+      }
+      .delete-text{
+        color: #f56c6c;
+      }
+    }
+  }
+
+  .table-tip{
+    text-align: right;
+    .code{
+      color: #409EFF;
+    }
+  }
