--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -79,9 +79,8 @@ html, body {
   
   .container,
   .page-container {
-    // height: 100%;
-    // width: 100%;
-    padding: 10px 20px;
+    height: 100%;
+    width: 100%;
     margin: 0 auto;
   }
   
