--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -4,9 +4,9 @@ html, body {
     height: 100%;
     font-family: 'Helvetica Neue',Helvetica,'PingFang SC','Hiragino Sans GB','Microsoft YaHei',SimSun,sans-serif;
     font-weight: 400;
+    height: 100%;
     -webkit-font-smoothing: antialiased;
     -webkit-tap-highlight-color: transparent;
-  
     &.is-component {
       overflow: hidden;
     }
@@ -14,7 +14,8 @@ html, body {
   
   #app {
     height: 100%;
-    
+    overflow: hidden;
+
     &.is-component {
       overflow-y: hidden;
   
@@ -45,9 +46,7 @@ html, body {
   }
   
   code {
-    // background-color: #f9fafc;
     padding: 0 4px;
-    // border: 1px solid #eaeefb;
     border-radius: 4px;
   }
   
@@ -63,7 +62,6 @@ html, body {
     font-family: Menlo, Monaco, Consolas, Courier, monospace;
     font-size: 12px;
     padding: 18px 24px;
-    // background-color: #fafafa;
     border: solid 1px #eaeefb;
     margin-bottom: 25px;
     border-radius: 4px;
@@ -120,26 +118,22 @@ html, body {
     }
   
     .tip {
-      padding: 8px 16px;
+      padding: 6px;
       background-color: #ECF8FF;
-      border-radius: 4px;
-      border-left: #50bfff 5px solid;
-      margin: 20px 0;
+      border-left: #50bfff 2px solid;
+      margin: 10px 0;
       code {
-        background-color: rgba(255, 255, 255, .7);
-        color: #445368;
+        color: #297BF5;
       }
     }
   
     .warning {
-      padding: 8px 16px;
+      padding: 6px;
       background-color: #fff6f7;
-      border-radius: 4px;
-      border-left: #FF525D 5px solid;
-      margin: 20px 0;
+      border-left: #FF525D 2px solid;
+      margin: 10px 0;
       code {
-        background-color: rgba(255, 255, 255, .7);
-        color: #445368;
+        color: #297BF5;
       }
     }
   }
@@ -246,5 +240,16 @@ html, body {
   }
 
   .el-select{
+    width: 250px;
+  }
+
+
+  //展示定义一下统一样式
+
+  .CubeInput{
+    width: 180px;
+  }
+ 
+  .el-input-group{
     width: 250px;
   }
