--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -257,3 +257,13 @@ html, body {
     }
   }
 }
+
+.datav-page{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
