--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -79,3 +79,8 @@
 @import "./drawer.scss";
 @import "./popconfirm.scss";
 @import "./cube-table.scss";
+@import "./cube-search-bar.scss";
+@import "./cube-table-list.scss";
+@import "./cube-select.scss";
+@import "./cube-select-tree.scss";
+@import "./cube-cascader.scss";
