添加新组件

--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -84,3 +84,4 @@
 @import "./cube-select.scss";
 @import "./cube-select-tree.scss";
 @import "./cube-cascader.scss";
+@import "./cube-progress.scss";
