--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -85,3 +85,4 @@
 @import "./cube-select-tree.scss";
 @import "./cube-cascader.scss";
 @import "./cube-progress.scss";
+@import "./cube-chart.scss";
