图表文档编写完成+

--- a/examples/assets/styles/common.scss
+++ b/examples/assets/styles/common.scss
@@ -185,3 +185,16 @@ textarea {
     padding: 0 12px;
   }
 }
+
+.cube-chart-list{
+  height: 210px;
+  width: 100%;
+  .title{
+    text-align: center;
+  }
+}
+
+.pie-chart{
+  height: 290px;
+  width: 100%;
+}
