添加图片预览组件

--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -85,6 +85,6 @@
 @import "./cube-select-tree.scss";
 @import "./cube-cascader.scss";
 @import "./cube-progress.scss";
-@import "./cube-upload.scss";
-@import "./cube-dialog.scss";
+@import "./cube-viewer.scss";
 @import "./cube-chart.scss";
+@import "./cube-dialog.scss";
