--- a/packages/theme-chalk/src/cube-search-bar.scss
+++ b/packages/theme-chalk/src/cube-search-bar.scss
@@ -20,6 +20,8 @@
     float: left;
     height: 40px;
 
+    .cube-select,
+    .cube-select-tree,
     >div {
       margin-right: 4px;
       margin-top: 10px;
@@ -35,10 +37,16 @@
       margin-right: 4px;
     }
 
-    .el-range-editor--small.el-input__inner {
+    .el-range-editor--small.el-date-editor--daterange {
       padding-left: 5px;
       padding-right: 0;
-      width: 226px;
+      width: 232px;
+    }
+
+    .el-range-editor--small.el-date-editor--datetimerange {
+      padding-left: 5px;
+      padding-right: 0;
+      width: 314px;
     }
 
     .el-date-editor .el-range-separator {
