--- a/packages/theme-chalk/src/cube-dialog.scss
+++ b/packages/theme-chalk/src/cube-dialog.scss
@@ -79,7 +79,8 @@
         display: flex;
         flex-direction: column;
         overflow: hidden;
-        padding: 10px !important;;
+        padding: 10px !important;
+        ;
     }
 
     @include e(footer) {
@@ -152,7 +153,13 @@
     .el-dialog__body__main {
         flex: 1;
         overflow: auto;
+        .scroll-bar {
+            // height: 100%;
+            min-height: 300px;
+            height: 99%;
+        }
     }
+
     .el-dialog__footer {
         text-align: center;
     }
