--- a/packages/theme-chalk/src/cube-dialog.scss
+++ b/packages/theme-chalk/src/cube-dialog.scss
@@ -154,9 +154,14 @@
         flex: 1;
         overflow: auto;
         .scroll-bar {
-            // height: 100%;
-            min-height: 300px;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
             height: 99%;
+            .el-row{
+                margin-left: 0px!important;;
+                margin-right: 0px!important;;
+            }
         }
     }
 
