--- a/packages/theme-chalk/src/cube-dialog.scss
+++ b/packages/theme-chalk/src/cube-dialog.scss
@@ -22,6 +22,12 @@
         overflow: auto;
         display: flex;
         flex-direction: column;
+        .scroll-bar {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            height: 99%;
+        }
     }
 
     @include e(wrapper) {
@@ -154,10 +160,6 @@
         flex: 1;
         overflow: auto;
         .scroll-bar {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            height: 99%;
             .el-row{
                 margin-left: 0px!important;;
                 margin-right: 0px!important;;
