--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -90,4 +90,5 @@
 @import "./cube-dialog.scss";
 @import "./cube-split.scss";
 @import "./cube-upload.scss";
+@import "./cube-scroll-to.scss";
 @import "./cube-title.scss";
