--- a/packages/theme-chalk/src/cube-title.scss
+++ b/packages/theme-chalk/src/cube-title.scss
@@ -1,4 +1,7 @@
-.cube-title {
+@import "mixins/mixins";
+@import "common/var";
+
+@include b2(title) {
     width: 100%;
     .cube-title-top {
         height: 2.25rem;
@@ -6,14 +9,17 @@
         align-items: center;
         justify-content: space-between;
         background: aliceblue;
+
         .title {
             display: flex;
             align-items: center;
             padding-left: .625rem;
             font-size: 1rem;
         }
+
         .tag {
             position: relative;
+
             &::after {
                 content: "";
                 position: absolute;
@@ -37,7 +43,7 @@
     .cube-title-content {
         padding: .625rem;
     }
-    .canCollapse{
+    .canCollapse {
         color: #2f86f6;
         font-size: .75rem;
         display: inline-block;
@@ -45,3 +51,52 @@
     }
     margin-bottom: .25rem;
 }
+
+
+// .cube-title {
+//     width: 100%;
+//     .cube-title-top {
+//         height: 2.25rem;
+//         display: flex;
+//         align-items: center;
+//         justify-content: space-between;
+//         background: aliceblue;
+//         .title {
+//             display: flex;
+//             align-items: center;
+//             padding-left: .625rem;
+//             font-size: 1rem;
+//         }
+//         .tag {
+//             position: relative;
+//             &::after {
+//                 content: "";
+//                 position: absolute;
+//                 left: 0;
+//                 width: 4px;
+//                 height: 90%;
+//                 background: #2f86f6;
+//             }
+//         }
+//     }
+//     .el-collapse-item__arrow {
+//         margin: 0 8px 0 auto;
+//         transition: transform .3s;
+//         font-weight: 300;
+//         cursor: pointer;
+
+//         &.is-active {
+//             transform: rotate(90deg);
+//         }
+//     }
+//     .cube-title-content {
+//         padding: .625rem;
+//     }
+//     .canCollapse{
+//         color: #2f86f6;
+//         font-size: .75rem;
+//         display: inline-block;
+//         cursor: pointer;
+//     }
+//     margin-bottom: .25rem;
+// }
