--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -93,3 +93,4 @@
 @import "./cube-title.scss";
 @import "./cube-scroll-to.scss";
 @import "./cube-select-cascade.scss";
+@import "./cube-more-type.scss";
