--- a/packages/theme-chalk/src/cube-more-type.scss
+++ b/packages/theme-chalk/src/cube-more-type.scss
@@ -1,5 +1,12 @@
 .cubeMoreType-main-list {
+    overflow: auto;
     .title {
-        padding: 4px 0;
+        padding: 2px 0;
+    }
+    .checkbox-list {
+        padding: 2px 0;
+    }
+    /deep/.el-popover{
+        padding: 5!important;
     }
 }
